kubernetes-yaml/005_keycloak-registration_vs.yml
# Copyright 2023 Universidad Politécnica de Madrid
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-registration
spec:
  hosts:
    - "*"
  gateways:
    - gh-gateway
  http:
    - match:
        - uri:
            prefix: /users/api/user
        - uri:
            exact: /users/api/user/
      rewrite:
        uri: "/user"
      route:
        - destination:
            host: keycloak-registration.default.svc.cluster.local
            port:
              number: 3000
